[gd_scene load_steps=16 format=3 uid="uid://dga0tbtypp5kp"]

[ext_resource type="Script" path="res://scenes/pause.gd" id="1_bf36x"]
[ext_resource type="Theme" uid="uid://b0qka3g3xxcs5" path="res://assets/fonts/font_Theme.tres" id="1_ni2iu"]
[ext_resource type="Texture2D" uid="uid://4dhwbg6c1y8i" path="res://assets/sprites/UI/Play Square Button.png" id="2_cp8i4"]
[ext_resource type="Texture2D" uid="uid://d2rtrhgiy24xl" path="res://assets/sprites/UI/Back Square Button.png" id="3_6cws6"]
[ext_resource type="Texture2D" uid="uid://b7g26utf1kjgb" path="res://assets/sprites/UI/Up Square Button.png" id="4_qbk4d"]
[ext_resource type="Texture2D" uid="uid://bcctblq4k2alr" path="res://assets/sprites/UI/Play Square Button Pressed.png" id="4_v7jdy"]
[ext_resource type="Texture2D" uid="uid://bjggg0n3rv7ri" path="res://assets/sprites/UI/Down Square Button.png" id="5_odhw8"]
[ext_resource type="Texture2D" uid="uid://by0n0a8k22537" path="res://assets/sprites/UI/Play Square Button Hover.png" id="5_qjqw3"]
[ext_resource type="Texture2D" uid="uid://bt2awrjgsdyde" path="res://assets/sprites/UI/Back Square Button Pressed.png" id="7_5rkng"]
[ext_resource type="Texture2D" uid="uid://clqa3wl8aq3d6" path="res://assets/sprites/UI/Back Square Button Hover.png" id="8_re12t"]
[ext_resource type="Texture2D" uid="uid://dxt48w4aydydh" path="res://assets/sprites/UI/Up Square Button Pressed.png" id="10_vylfd"]
[ext_resource type="Texture2D" uid="uid://by0gheob4m2kb" path="res://assets/sprites/UI/Down Square Button Pressed.png" id="11_7ttcb"]
[ext_resource type="Texture2D" uid="uid://d0ie1cu2132ir" path="res://assets/sprites/UI/Up Square Button Hover.png" id="11_d01m7"]
[ext_resource type="Texture2D" uid="uid://yjlbeensuvfd" path="res://assets/sprites/UI/Down Square Button Hover.png" id="12_vs4ud"]

[sub_resource type="CanvasTexture" id="CanvasTexture_dxhpt"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bf36x")

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color(0.215686, 0.215686, 0.215686, 0.627451)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_dxhpt")

[node name="Pause" type="Label" parent="."]
offset_left = 195.0
offset_top = 154.0
offset_right = 947.0
offset_bottom = 254.0
theme = ExtResource("1_ni2iu")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_font_sizes/font_size = 80
text = "PAUSE"
horizontal_alignment = 1

[node name="PlayButton" type="TextureButton" parent="."]
offset_left = 523.0
offset_top = 274.0
offset_right = 723.0
offset_bottom = 474.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_cp8i4")
texture_pressed = ExtResource("4_v7jdy")
texture_hover = ExtResource("5_qjqw3")

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -291.0
offset_right = -313.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("3_6cws6")
texture_pressed = ExtResource("7_5rkng")
texture_hover = ExtResource("8_re12t")
stretch_mode = 3

[node name="Back" type="Label" parent="."]
offset_left = 28.0
offset_top = 105.0
offset_right = 140.0
offset_bottom = 157.0
theme = ExtResource("1_ni2iu")
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="Resume" type="Label" parent="."]
offset_left = 487.0
offset_top = 374.0
offset_right = 658.0
offset_bottom = 426.0
theme = ExtResource("1_ni2iu")
theme_override_font_sizes/font_size = 40
text = "Resume"

[node name="Volume" type="Label" parent="."]
offset_left = 145.0
offset_top = 289.0
offset_right = 340.0
offset_bottom = 353.0
theme = ExtResource("1_ni2iu")
theme_override_font_sizes/font_size = 50
text = "Volume"

[node name="VolumeUpButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = 52.0
offset_right = -219.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("4_qbk4d")
texture_pressed = ExtResource("10_vylfd")
texture_hover = ExtResource("11_d01m7")
stretch_mode = 3

[node name="VolumeDownButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = 148.0
offset_right = -224.0
offset_bottom = 348.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("5_odhw8")
texture_pressed = ExtResource("11_7ttcb")
texture_hover = ExtResource("12_vs4ud")
stretch_mode = 3

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 272.0
offset_top = 360.0
offset_right = 333.0
offset_bottom = 562.0
min_value = -20.0
max_value = 20.0
step = 1.0
allow_greater = true
allow_lesser = true
fill_mode = 3
show_percentage = false

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VolumeUpButton" to="." method="_on_volume_up_button_pressed"]
[connection signal="pressed" from="VolumeDownButton" to="." method="_on_volume_down_button_pressed"]
